# cphb-dat

./: .gitignore  .gitmodules  README.md  git
compilers/notes/: general.md
extraprojects/gdx/: build.gradle
extraprojects/jmetest/: build.gradle  settings.gradle
extraprojects/jmetest/scripts/desktopDeployment/: Jmetest.command  Jmetest.sh
extraprojects/learnopengl/c/: .clang-format  ;  CMakeLists.txt  cmakehelp.txt
extraprojects/learnopengl/c/include/: includes_dot_haitch.h  obh_defs.h  shader_utils.h
extraprojects/learnopengl/c/src/: blocks.c  camera.c  decl.h  main.c  main_game.c  shader_utils.c  world_gen.c
extraprojects/learnopengl/gfxtest/: CMakeLists.txt  main.cpp
extraprojects/learnopengl/gtktest/: CMakeLists.txt  main.c
extraprojects/learnopengl/obhproject/: compileandrun
extraprojects/learnopengl/obhproject/src/: glad.c  main.c
extraprojects/learnopengl/saves/GoL/: main  main.c
extraprojects/learnopengl/saves/GoLTwo/: geom.c  gl_utils.c  main.c  noise.c  obh_types.h  shader_utils.c  timing.c  util.c
extraprojects/learnopengl/saves/blocks/: camera.c  glad.c  main  main.c  obh_types.h  shapes.c
extraprojects/learnopengl/untitled/: main.c
extraprojects/raylib/c/: .clang-format  CMakeLists.txt  README.md  buildandrun.sh
extraprojects/raylib/c/src/: blocks.c  gol.c  (+7 more)
extraprojects/raylib/cpp/: .clang-format  .gitignore  CMakeLists.txt  README.md
extraprojects/raylib/cpp/include/: includes_cpp.h
extraprojects/raylib/cpp/src/: CMakeLists.txt  main.cpp
extraprojects/raylib/saves/: GoL.c
extraprojects/reading/: pbr-book.txt
extraprojects/saves/utils/: arrutils.c
extraprojects/vulkan/vulkan_base/: CMakeLists.txt  test.c
flow1/serverclient-2/: pom.xml
flow2/uge4-database/: noter.md
flow3/app-demo/: pom.xml
flow3/uge6-frontend/html/: index.html
flow3/uge7-backend/: nohup.out
flow3/uge8-lifehack/: lifehackdatabase  lifehackdatabasecreatescript  noter.md
flow3/uge8-lifehack/lifehack_spring_2024_backup_19-03/: .project
jmetest/: README.txt
jmetest/scripts/desktopDeployment/: Jmetest.bat
secretpasswords/: digitaloceanPostgresPassword
sem2/: allnotes.md  pensum-noter.md
sem2/flow1/uge3-threads/: noter.md
sem2/flow3/uge6-frontend/: noter.md
sem2/flow4/.ssh/: id_rsa  id_rsa.pub
sem2/semprojekt/private/: .project
semprojekt/: dependency-reduced-pom.xml  noter.md  pom.xml
semprojekt/backup/: dependency-reduced-pom.xml  pom.xml
semprojekt/backup/notes/: noter.md
semprojekt/backup/public/: runmvn.sh
semprojekt/private/: dependency-reduced-pom.xml  noter.md
sys/notes/: threads.md
(+176 files in other folders)
